--- a/innfprog2024_exam/deleksamen2/exam2.css
+++ b/innfprog2024_exam/deleksamen2/exam2.css
@@ -55,7 +55,7 @@ main {
 
 /* CONTACTS */
 #contacts {
-    background: #eee;
+    background: #c5c4c4;
     grid-area: contacts;
 
     article {
@@ -88,6 +88,7 @@ main {
 #books {
     grid-area: books;
     text-align: left;
+    background-color: #d2d0d0;
 
     span {
         padding: 5px;
@@ -98,7 +99,7 @@ main {
 }
 #bookhead {
     background: #333;
-    color: #fff;
+    color: #ffffff;
     font-weight: 700;
 }
 .bookline {
@@ -182,7 +183,7 @@ main {
             justify-content: space-between;
             clear: both;
             border-bottom: 1px dotted #074b72;
-            padding-bottom: 5px;
+            padding-bottom: 7px;
             margin-top: 5px;
         }
     }
@@ -198,7 +199,7 @@ main {
     font-size: .8rem;
     border-radius: 5px;
     margin-left: .5rem;
-    margin-bottom: 10px;
+    margin-bottom: 1px;
     padding: 5px;
     text-align: center;
 }
