--- a/innfprog2024_exam/deleksamen2/exam2.css
+++ b/innfprog2024_exam/deleksamen2/exam2.css
@@ -82,6 +82,8 @@ main {
     font-size: 3rem;
     background: #074b72;
     color: #56dec8;
+
+    
 }
 
 /* BOOKS */
@@ -98,7 +100,7 @@ main {
     background: #f3f3f3;
 }
 #bookhead {
-    background: #333;
+    background: #555555;
     color: #ffffff;
     font-weight: 700;
 }
@@ -118,6 +120,16 @@ main {
     width: 80px;
     text-align: left;
 }
+
+/*
+#booklines {
+    list-style: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-direction: column;
+}
+*/
 
 /* TODOS */
 #todoform {
